@@ -1,0 +1,10 @@
+Test how opaque base URLs work for fetching subresources.
+
+SUCCESS
+SUCCESS
+SUCCESS
+SUCCESS
+Expected failure, see bug 9706.
+SUCCESS
+SUCCESS
+          
