@@ -1,3 +1,15 @@
+2007-01-26  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Maciej.
+
+        http://bugs.webkit.org/show_bug.cgi?id=12385
+        Assertion failure when loading subresources from "data:" frames
+
+        Test: fast/loader/opaque-base-url.html
+
+        * platform/KURL.cpp:
+        (WebCore::KURL::init): Make the URL invalid if it's relative, but has an opaque or empty base.
+
 2007-01-26  Dex Deacon  <occupant4@gmail.com>
 
         Reviewed by Darin.
